add tic-tac-toe functionality

--- a/style.css
+++ b/style.css
@@ -115,14 +115,15 @@ background: radial-gradient(circle, rgba(255, 81, 255, 0.5) 0%, rgb(109, 65, 255
 }
 
 .tile{
-    width: 135px;
-    height: 135px;
     border: 2px solid rgb(234, 129, 255);
     font-size: 3.5em;
     display: flex;
     align-items: center;
     justify-content: center;
-    color:#f6bcfc
+    color:#f6bcfc;
+    cursor: pointer;
+    width: 132px;
+    height: 132px;
 }
 
 .players{
@@ -140,7 +141,10 @@ background: radial-gradient(circle, rgba(255, 81, 255, 0.5) 0%, rgb(109, 65, 255
     padding: 15px;
     border-radius: 20%;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+}
 
+.player:hover{
+  transform: scale(1.02);
 }
 
 .selected{
