--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ background: radial-gradient(circle, rgba(255, 81, 255, 0.5) 0%, rgb(109, 65, 255
     background: radial-gradient(circle, rgba(223, 250, 102, 0.5) 0%, rgba(255, 235, 20, 1) 100%);
 }
 
-#settings{
+#options{
     background: #b3dcff;
     background: radial-gradient(circle, rgba(179, 220, 255, 0.5) 0%, rgba(20, 196, 255, 1) 100%);
 }
