--- a/style.css
+++ b/style.css
@@ -85,62 +85,62 @@ body::after {
 }
 
 main{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20vw;
-    padding: 1%;
-    font-family: "Twinkle Star", cursive;
-    font-size: 1.5em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20vw;
+  padding: 1%;
+  font-family: "Twinkle Star", cursive;
+  font-size: 1.5em;
 }
 
 .game-content{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
 }
 
 .board-background{
-    background: #ff8aff;
-background: radial-gradient(circle, rgba(255, 81, 255, 0.5) 0%, rgb(109, 65, 255) 100%);
-    padding: 5%;
-    border-radius: 50px;
+  background: #ff8aff;
+  background: radial-gradient(circle, rgba(255, 81, 255, 0.5) 0%, rgb(109, 65, 255) 100%);
+  padding: 5%;
+  border-radius: 50px;
 }
 
 .board{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    border: 2px solid rgb(234, 129, 255);
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  border: 2px solid rgb(234, 129, 255);
 }
 
 .tile{
-    border: 2px solid rgb(234, 129, 255);
-    font-size: 3.5em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color:#f6bcfc;
-    cursor: pointer;
-    width: 132px;
-    height: 132px;
+  border: 2px solid rgb(234, 129, 255);
+  font-size: 3.5em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color:#f6bcfc;
+  cursor: pointer;
+  width: 132px;
+  height: 132px;
 }
 
 .players{
-    display: flex;
-    gap: 15vw;
+  display: flex;
+  gap: 15vw;
 }
 
 .player{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    gap: 20px;
-    background: #e9b0ff;
-    background: radial-gradient(circle, rgba(233, 176, 255, 0.35) 0%, rgba(178, 171, 255, 1) 100%);
-    padding: 15px;
-    border-radius: 20%;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 20px;
+  background: #e9b0ff;
+  background: radial-gradient(circle, rgba(233, 176, 255, 0.35) 0%, rgba(178, 171, 255, 1) 100%);
+  padding: 15px;
+  border-radius: 20%;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
 .player:hover{
@@ -148,63 +148,93 @@ background: radial-gradient(circle, rgba(255, 81, 255, 0.5) 0%, rgb(109, 65, 255
 }
 
 .selected{
-    background: #cf99ff;
-    background: radial-gradient(circle, rgba(207, 153, 255, 0.5) 0%, rgba(255, 89, 203, 1) 100%);
+  background: #cf99ff;
+  background: radial-gradient(circle, rgba(207, 153, 255, 0.5) 0%, rgba(255, 89, 203, 1) 100%);
 }
 
 .player img{
-    width: 75px;
-    border-radius: 45%;
+  width: 75px;
+  border-radius: 45%;
 }
 
 .game-info{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .game-info h1{
-    font-family: 'candy-cane';
-    color: #fac8ff;
-    font-size: 3.5em;
+  font-family: 'candy-cane';
+  color: #fac8ff;
+  font-size: 3.5em;
 }
 
-.game-options{
-    display: flex;
-    gap: 20px;
+.game-option{
+  display: flex;
+  gap: 20px;
 }
 
-.game-options button{
-    padding: 5px 8px;
-    font-family:"Karla", sans-serif;
-    border: none;
-    border-radius: 20%;
-    width: 80px;
-    cursor: pointer;
+.game-option button, .win-dialog-button button{
+  padding: 5px 8px;
+  font-family:"Karla", sans-serif;
+  border: none;
+  border-radius: 20%;
+  cursor: pointer;
 }
 
-.game-options button:hover{
-    opacity: 0.85;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+.game-option button{
+  width: 80px;
+  border: none;
 }
 
-.game-options button:active{
-    opacity: 0.75;
-    transform: scale(1.05);
+.win-dialog-button button{
+  width: 65px;
+}
+
+.win-dialog-button button:focus{
+  outline: 1px solid #652aa0;
+}
+
+.game-option button:hover, .win-dialog-button button:hover{
+  opacity: 0.85;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.game-option button:active, .win-dialog-button button:active{
+  opacity: 0.75;
+  transform: scale(1.05);
 }
 
 #reset{
-    background: #c7ffb3;
-    background: radial-gradient(circle, rgba(199, 255, 179, 0.5) 0%, rgba(51, 255, 20, 1) 100%);
+  background: #c7ffb3;
+  background: radial-gradient(circle, rgba(199, 255, 179, 0.5) 0%, rgba(51, 255, 20, 1) 100%);
 }
 
-#menu{
-    background: #dffa66;
-    background: radial-gradient(circle, rgba(223, 250, 102, 0.5) 0%, rgba(255, 235, 20, 1) 100%);
+#replay{
+  background: #ff8aff;
+  background: radial-gradient(circle, rgba(255, 138, 255, 0.5) 0%, rgba(123, 61, 255, 1) 100%);
 }
 
 #options{
-    background: #b3dcff;
-    background: radial-gradient(circle, rgba(179, 220, 255, 0.5) 0%, rgba(20, 196, 255, 1) 100%);
+  background: #b3dcff;
+  background: radial-gradient(circle, rgba(179, 220, 255, 0.5) 0%, rgba(20, 196, 255, 1) 100%);
 }
 
+#menu, #menu-option{
+  background: #6aff00;
+  background: radial-gradient(circle, rgba(106, 255, 0, 0.5) 0%, rgba(162, 217, 52, 1) 100%);
+}
+
+.win-dialog{
+  border: 2px dashed #f06aff;
+  border-radius: 20px;
+  background: #ff8aff;
+  background: radial-gradient(circle, rgba(255, 138, 255, 0.5) 0%, rgba(165, 105, 255, 1) 100%);
+  color: white;
+}
+
+.win-dialog div{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
